@@ -4,6 +4,8 @@ Changelog
 1.9.4 (unreleased)
 ------------------
 
+- Fix escaping issue when highlighting plaintext. [jone]
+
 - Always quote values of a list containing an operator.
   [mathias.leimgruber]
 
